# op_note_transcription

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: transcription_route.py
app/database/: connection.py
app/prompts/: extraction_prompt.yaml  transcription_prompt.yaml
app/pydantic/: note.py
app/services/: clients.py  functions.py
app/static/: index.html
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: database_route.py  login_route.py  transcription_route.py
backend/app/database/: connection.py  models.py
backend/app/prompts/: extraction_prompt.yaml
backend/app/pydantic/: note.py
backend/app/services/: clients.py  functions.py
backend/app/static/: index.html
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  LoginPage.jsx  NotePage.jsx  RegisterPage.jsx  index.css
tests/: conftest.py  test_api.py  test_db.py  test_login_registration.py  test_services.py
