[project]
name = "opnote-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.136.1",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "pyjwt[crypto]>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
]
